attempting to debug collapsing issue (using different ids and classes)

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,24 @@
-/* index.html styling*/
-#site_heading, #third-word {
-    text-align: center !important;
-    font-family: "Press Start 2P", system-ui !important;
-    font-weight: 400;
-    font-style: normal;
+
+
+
+.main {
+    min-height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    background-color: black;
     color: white;
-}
-#main {
-    background-color: black !important;
-}
-.main-text {
-    color:white !important;
-    
+
 }
 
+#sidebar {
+    max-width: 264px;
+    min-width: 264px;
+    transition: all 0.35s ease-in-out;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+#sidebar.collapsed {
+    margin-left: -1000px;
+}
